Equations overflowing fixed

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -539,5 +539,8 @@ section {
 			width: 100%;
 		}
 	}
-
+	.img-wrapper {
+		width: 100%;
+		box-shadow: none;
+	}
 }
